Added BT Detection, Improved stuff
When Bluetooth is disconnected, an icon will pop up below the health/power bar showing it. Also fixed some tiny display stuff with the monochrome version and also improved some stuff I think, I can't remember

--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
         "resources": {
             "media": [
                 {
+                    "file": "images/bt_disconnect.bmp",
+                    "name": "BT_DC",
+                    "targetPlatforms": null,
+                    "type": "bitmap"
+                },
+                {
                     "file": "fonts/TI_84_Font_24.ttf",
                     "name": "TI_FONT_24",
                     "targetPlatforms": null,
